--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,15 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "doctrine/doctrine-bundle": "^2.1",
-        "doctrine/orm": "^2.7",
-        "babdev/pagerfanta-bundle": "^2.5"
+        "php": "^8",
+        "doctrine/orm": "^2.9",
+        "babdev/pagerfanta-bundle": "^2.5",
+        "symfony/framework-bundle": "^5.3",
+        "twig/twig": "^3.3"
     },
     "autoload": {
         "psr-4": {
             "Kricha\\DoctrineAuditBundle\\": "src"
         }
-    },
-    "require-dev": {
     }
 }
