fix: fix config file

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,5 +1,7 @@
 services:
     _defaults:
+        autowire: true
+        autoconfigure: true
         public: false
     Kricha\DoctrineAuditBundle\Controller\AuditController:
         tags: ['controller.service_arguments']
